Add test suite for tickets router
Changes swagger docs
Change validator schema
Add description to ticketModel
Fix ticketsController functions
